[project]
name = "chapter-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.21.1",
    "google-generativeai>=0.8.5",
    "requests>=2.32.4",
    "scrapy>=2.13.2",
    "smolagents[litellm,toolkit]>=1.18.0",
]
